# isbn-api

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
isbn_api/: __init__.py  config.py  main.py
tests/: test_config.py  test_main.py
