[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isbn-api"
description = "Query books' information via their ISBN."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Heitor Pascoal de Bittencourt", email = "heitorpbittencourt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi==0.88.0",
  "uvicorn==0.20.0",
  "requests==2.28.1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/heitorpb/isbn-api#readme"
Issues = "https://github.com/heitorpb/isbn-api/issues"
Source = "https://github.com/heitorpb/isbn-api"

[tool.hatch.version]
path = "isbn_api/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "httpx",
  "flake8",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=isbn_api --cov=tests {args}"
no-cov = "cov --no-cov {args}"
lint = "flake8 isbn_api/ tests/"
serve = "uvicorn isbn_api.main:app --reload --host 0.0"

[[tool.hatch.envs.test.matrix]]
python = ["310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "isbn_api/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
